--- a/index.html
+++ b/index.html
@@ -77,9 +77,13 @@
       <p class="mt-2 text-white">Vagas limitadas!</p>
     </section>
 
-    <section class="text-center">
+    <section class="text-center px-4">
       <h2 class="text-2xl font-semibold mb-4 text-white">📲 Entre no grupo de informações</h2>
-      <a href="https://chat.whatsapp.com/KeWBcnidg1zAoXuMJItlZJ" target="_blank" class="bg-green-500 text-white px-8 py-3 rounded-full text-xl font-bold hover:bg-green-600 transition">Entrar no grupo do WhatsApp</a>
+      <a href="https://chat.whatsapp.com/KeWBcnidg1zAoXuMJItlZJ" 
+         target="_blank"
+         class="inline-block w-full sm:w-auto bg-green-500 text-white px-6 py-3 rounded-full text-lg font-bold hover:bg-green-600 transition">
+        Entrar no grupo do WhatsApp
+      </a>
     </section>
   </div>
 </body>
